logs/pyrepl.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyrepl'...
Compiling './lib/python3.5/site-packages/pyrepl/keymaps.py'...
***   File "./lib/python3.5/site-packages/pyrepl/keymaps.py", line 65
    for c in map(chr, range(32, 127)) if c <> '\\'] + \
                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyrepl/pygame_console.py'...
***   File "./lib/python3.5/site-packages/pyrepl/pygame_console.py", line 133
    def refresh(self, screen, (cx, cy)):
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyrepl/pygame_keymap.py'...
***   File "./lib/python3.5/site-packages/pyrepl/pygame_keymap.py", line 93
    raise KeySpecError, \
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyrepl-0.8.4.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
